fix vertical alignment of product indicator

--- a/blocks/product-list/product-list.css
+++ b/blocks/product-list/product-list.css
@@ -84,7 +84,7 @@
 
 .product-list ul>li h4 .icon-sapproduct {
   position: absolute;
-  top: -4px;
+  top: -2px;
   left: 0;
   height: 20px;
   width: 6px;  
